Correct page overflow on the x axis

--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -39,6 +39,7 @@ html,
 body {
   height: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* Sections */
